--- a/locale/es.txt
+++ b/locale/es.txt
@@ -30,10 +30,10 @@ video_DA33782A_8881_5614_41CD_D226BA0C5F27.label = DJI_0191
 video_DBCFFB06_8880_CA1C_4181_43E694E0634E.label = DJI_0196
 
 ### Video
-videolevel_DD9745A5_AC8D_F19E_41C9_CF63B113B0E1.url = media/video_DA33782A_8881_5614_41CD_D226BA0C5F27_es.mp4
-videolevel_DD9745A5_AC8D_F19E_41C9_CF63B113B0E1.posterURL = media/video_DA33782A_8881_5614_41CD_D226BA0C5F27_poster_es.jpg
-videolevel_DD9235CB_AC8D_F1AA_41B8_6948407A40AA.url = media/video_DBCFFB06_8880_CA1C_4181_43E694E0634E_es.mp4
-videolevel_DD9235CB_AC8D_F1AA_41B8_6948407A40AA.posterURL = media/video_DBCFFB06_8880_CA1C_4181_43E694E0634E_poster_es.jpg
+videolevel_B00FFBD3_AE6F_FF1B_41BA_41897E243336.url = media/video_DA33782A_8881_5614_41CD_D226BA0C5F27_es.mp4
+videolevel_B00FFBD3_AE6F_FF1B_41BA_41897E243336.posterURL = media/video_DA33782A_8881_5614_41CD_D226BA0C5F27_poster_es.jpg
+videolevel_B00F6BF4_AE6F_FF1D_41DD_0BAF543DA527.url = media/video_DBCFFB06_8880_CA1C_4181_43E694E0634E_es.mp4
+videolevel_B00F6BF4_AE6F_FF1D_41DD_0BAF543DA527.posterURL = media/video_DBCFFB06_8880_CA1C_4181_43E694E0634E_poster_es.jpg
 
 ## Skin
 
@@ -52,7 +52,9 @@ Image_9ED3C076_AC9D_EF7A_41DA_4A1BC7628E29.url = skin/Image_9ED3C076_AC9D_EF7A_4
 Image_B014403C_AC8D_AEEE_41BC_8F0205674412.url = skin/Image_B014403C_AC8D_AEEE_41BC_8F0205674412_es.png
 Image_B277F92A_AC8A_FEEA_41D9_78EDC69822EF.url = skin/Image_B277F92A_AC8A_FEEA_41D9_78EDC69822EF_es.png
 Image_B9045E34_AC8E_72FE_41E4_2D51FDD8FEFA.url = skin/Image_B9045E34_AC8E_72FE_41E4_2D51FDD8FEFA_es.png
+Image_BB7F834B_AE55_EF0B_41E5_23F4903F962B.url = skin/Image_BB7F834B_AE55_EF0B_41E5_23F4903F962B_es.jpg
 Image_BC6AFD8F_AC8B_B1A9_41B0_762A96801EDC.url = skin/Image_BC6AFD8F_AC8B_B1A9_41B0_762A96801EDC_es.png
+Image_BF55BF07_AE54_78FB_41DC_8D96344640C0.url = skin/Image_BF55BF07_AE54_78FB_41DC_8D96344640C0_es.png
 Image_CA96AEDE_AC9A_D3AA_41D0_40303FEF5D72.url = skin/Image_CA96AEDE_AC9A_D3AA_41D0_40303FEF5D72_es.png
 Image_CD80ABED_AC96_716E_41E4_1605FDA28378.url = skin/Image_CD80ABED_AC96_716E_41E4_1605FDA28378_es.png
 Image_E35DC53E_AC8B_D6EA_41D1_4F776CA8C932.url = skin/Image_E35DC53E_AC8B_D6EA_41D1_4F776CA8C932_es.png
